--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
 </head>
 <body>
     <h1> My MF Calculator Project</h1>
-    <div id='box'></div>
+    <div id='box'>
+        <div id='screen'></div>
+        <div id='clear'>CLR</div>
+        <div id='del'>DEL</div>
+        <div id='numberBox'>
+            <div class='numbers'>0</div>
+            <div class='numbers'>.</div>
+            <div class='numbers'>=</div>
+            <div class='numbers'>+</div>
+            <div class='numbers'>1</div>
+            <div class='numbers'>2</div>
+            <div class='numbers'>3</div>
+            <div class='numbers'>-</div>
+            <div class='numbers'>4</div>
+            <div class='numbers'>5</div>
+            <div class='numbers'>6</div>
+            <div class='numbers'>x</div>
+            <div class='numbers'>7</div>
+            <div class='numbers'>8</div>
+            <div class='numbers'>9</div>
+            <div class='numbers'>/</div>
+        </div>
+
+
+
+    </div>
 </body>
 </html>
