--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
         <div id='clear'>CLR</div>
         <div id='del'>DEL</div>
         <div id='numberBox'>
-            <div class='numbers'>0</div>
-            <div class='numbers'>.</div>
-            <div class='numbers'>=</div>
-            <div class='numbers'>+</div>
-            <div class='numbers'>1</div>
-            <div class='numbers'>2</div>
-            <div class='numbers'>3</div>
-            <div class='numbers'>-</div>
-            <div class='numbers'>4</div>
-            <div class='numbers'>5</div>
-            <div class='numbers'>6</div>
-            <div class='numbers'>x</div>
-            <div class='numbers'>7</div>
-            <div class='numbers'>8</div>
-            <div class='numbers'>9</div>
-            <div class='numbers'>/</div>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = 0">0</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = '.'">.</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = '='">=</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = '+'">+</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = 1">1</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = 2">2</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = 3">3</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = '-'">-</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = 4">4</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = 5">5</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = 6">6</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = 'x'">x</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = 7">7</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = 8">8</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = 9">9</button>
+            <button class='numbers'onclick="getElementById('screen').innerHTML = '/'">/</button>
         </div>
 
 
