--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1> My MF Calculator Project</h1>
     <div id='box'>
         <div id='screen'></div>
+        <div id='screenSmall'></div>
         <button id='clear'onclick="getElementById('screen').innerHTML = 0">CLR</button>
         <button id='del'>DEL</button>
         <div id='numberBox'>
