working on operaor

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button id='0' class='numbers'onclick="getElementById('screen').innerHTML = 0">0</button>
             <button id='.' class='numbers'onclick="getElementById('screen').innerHTML = '.'">.</button>
             <button id= '=' class='numbers'onclick="getElementById('screen').innerHTML = '='">=</button>
-            <button id='+' class='numbers'onclick="getElementById('screen').innerHTML = '+'">+</button>
+            <button id='+' class='numbers'onclick="getElementById('screen').innerHTML = ">+</button>
             <button id=1 class='numbers'onclick="getElementById('screen').innerHTML = 1">1</button>
             <button id=2 class='numbers'onclick="getElementById('screen').innerHTML = 2">2</button>
             <button id=3 class='numbers'onclick="getElementById('screen').innerHTML = 3">3</button>
