--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         <div id='numberBox'>
             <button id='0' class='numbers'onclick="getElementById('screen').innerHTML = 0">0</button>
             <button id='.' class='numbers'onclick="getElementById('screen').innerHTML = '.'">.</button>
-            <button id= '=' class='numbers'onclick="getElementById('screen').innerHTML = '='">=</button>
-            <button id='+' class='numbers'onclick="getElementById('screen').innerHTML = ">+</button>
+            <button id= '=' class='numbers'onclick="getElementById('screenSmall').innerHTML = '='">=</button>
+            <button id='+' class='numbers'onclick="getElementById('screenSmall').innerHTML ='+'">+</button>
             <button id=1 class='numbers'onclick="getElementById('screen').innerHTML = 1">1</button>
             <button id=2 class='numbers'onclick="getElementById('screen').innerHTML = 2">2</button>
             <button id=3 class='numbers'onclick="getElementById('screen').innerHTML = 3">3</button>
-            <button id='-' class='numbers'onclick="getElementById('screen').innerHTML = '-'">-</button>
+            <button id='-' class='numbers'onclick="getElementById('screenSmall').innerHTML = '-'">-</button>
             <button id=4 class='numbers'onclick="getElementById('screen').innerHTML = 4">4</button>
             <button id=5 class='numbers'onclick="getElementById('screen').innerHTML = 5">5</button>
             <button id=6 class='numbers'onclick="getElementById('screen').innerHTML = 6">6</button>
-            <button id='x' class='numbers'onclick="getElementById('screen').innerHTML = 'x'">x</button>
+            <button id='x' class='numbers'onclick="getElementById('screenSmall').innerHTML = 'x'">x</button>
             <button id=7 class='numbers'onclick="getElementById('screen').innerHTML = 7">7</button>
             <button id=8 class='numbers'onclick="getElementById('screen').innerHTML = 8">8</button>
             <button id=9 class='numbers'onclick="getElementById('screen').innerHTML = 9">9</button>
-            <button id='/' class='numbers'onclick="getElementById('screen').innerHTML = '/'">/</button>
+            <button id='/' class='numbers'onclick="getElementById('screenSmall').innerHTML = '/'">/</button>
         </div>
     </div>
 </body>
