--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
     <div id='box'>
         <div id='screen'></div>
         <div id='screenSmall'></div>
-        <button id='clear'onclick="getElementById('screen').innerHTML = 0">CLR</button>
+        <button id='clear'>CLR</button>
         <button id='del'>DEL</button>
         <div id='numberBox'>
-            <button id='0' class='numbers'onclick="getElementById('screen').innerHTML = 0">0</button>
-            <button id='.' class='numbers'onclick="getElementById('screen').innerHTML = '.'">.</button>
-            <button id= '=' class='numbers'onclick="getElementById('screenSmall').innerHTML = '='">=</button>
+            <button id='0' class='numbers'>0</button>
+            <button id='.' class='numbers'>.</button>
+            <button id= '=' class='numbers'>=</button>
             <button id='+' class='numbers'>+</button>
-            <button id=1 class='numbers'onclick="getElementById('screen').innerHTML = 1">1</button>
-            <button id=2 class='numbers'onclick="getElementById('screen').innerHTML = 2">2</button>
-            <button id=3 class='numbers'onclick="getElementById('screen').innerHTML = 3">3</button>
-            <button id='-' class='numbers'onclick="getElementById('screenSmall').innerHTML = '-'">-</button>
-            <button id=4 class='numbers'onclick="getElementById('screen').innerHTML = 4">4</button>
-            <button id=5 class='numbers'onclick="getElementById('screen').innerHTML = 5">5</button>
-            <button id=6 class='numbers'onclick="getElementById('screen').innerHTML = 6">6</button>
-            <button id='x' class='numbers'onclick="getElementById('screenSmall').innerHTML = 'x'">x</button>
-            <button id=7 class='numbers'onclick="getElementById('screen').innerHTML = 7">7</button>
-            <button id=8 class='numbers'onclick="getElementById('screen').innerHTML = 8">8</button>
-            <button id=9 class='numbers'onclick="getElementById('screen').innerHTML = 9">9</button>
-            <button id='/' class='numbers'onclick="getElementById('screenSmall').innerHTML = '/'">/</button>
+            <button id=1 class='numbers'>1</button>
+            <button id=2 class='numbers'>2</button>
+            <button id=3 class='numbers'>3</button>
+            <button id='-' class='numbers'>-</button>
+            <button id=4 class='numbers'>4</button>
+            <button id=5 class='numbers'>5</button>
+            <button id=6 class='numbers'>6</button>
+            <button id='x' class='numbers'>x</button>
+            <button id=7 class='numbers'>7</button>
+            <button id=8 class='numbers'>8</button>
+            <button id=9 class='numbers'>9</button>
+            <button id='/' class='numbers'>/</button>
         </div>
     </div>
 </body>
