--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src='calculator.js' defer></script>
 </head>
 <body>
-    <h1> My MF Calculator Project</h1>
+    <h1> My Calculator Project</h1>
     <div id='box'>
         <div id='screen'></div>
         <div id='screenSmall'></div>
